--- a/Ejercicios/java-webapp/pom.xml
+++ b/Ejercicios/java-webapp/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>es.urjc.code</groupId>
+	<groupId>es.gva.edu.peps</groupId>
 	<artifactId>java-webapp</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
@@ -18,7 +18,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<start-class>es.urjc.code.daw.tablonanuncios.Application</start-class>
+		<start-class>es.gva.edu.peps.Application</start-class>
 	</properties>
 
 	<dependencies>
