--- a/hackingLab-PePS/dockerfile
+++ b/hackingLab-PePS/dockerfile
@@ -44,7 +44,7 @@ RUN apt-get install -y \
 RUN git clone https://github.com/longld/peda.git ~/peda && \
     echo "source ~/peda/peda.py" >> ~/.gdbinit
 
-RUN apt install -y kali-desktop-xfce xrdp dbus-x11 && service xrdp start
+RUN apt install -y kali-desktop-xfce xrdp dbus-x11
 
-# EXPOSE 3389
+EXPOSE 3389
 CMD ["/bin/bash"]
