--- a/my-python-app/Dockerfile.old
+++ b/my-python-app/Dockerfile.old
@@ -1,6 +1,8 @@
-FROM alpine:latest
+FROM ubuntu:latest
 
-RUN apk update && apk add python3 && apk add py3-pip
+RUN apt update && apt install -y \
+python3 \
+pip && apt clean
 
 WORKDIR /app
 COPY . /app/
