Modificado package.json para poder ejecutar servicio web con Node

--- a/my-javascript-app/package.json
+++ b/my-javascript-app/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "solucionejerciciosjavascript",
+  "name": "my-javascript-app",
   "version": "1.0.0",
-  "description": "Pruebas JavaScript",
+  "description": "Adplicación Web Node Dockerizada con pruebas JavaScript en Mocha",
   "main": "main.js",
   "directories": {
-    "test": "test"
+    "test": "test",
+    "src": "src",
+    "public": "src/public"
   },
   "scripts": {
     "test": "mocha test/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/profeJG/SolucionEjerciciosJavaScript.git"
+    "url": "git+https://github.com/profeJG/docker-peps.git"
   },
   "keywords": [
     "Mocha",
@@ -19,16 +21,21 @@
     "Javascript",
     "Testing",
     "Progranacion",
-    "Pruebas"
+    "Pruebas",
+    "Node",
+    "Nodejs",
+    "Express"
   ],
   "author": "Jose Gaspar Sanchez Garcia",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/profeJG/SolucionEjerciciosJavaScript/issues"
+    "url": "https://github.com/profeJG/docker-peps/issues"
   },
-  "homepage": "https://github.com/profeJG/SolucionEjerciciosJavaScript#readme",
+  "homepage": "https://github.com/profeJG/docker-peps/blob/main/my-javascript-app/README.md",
   "dependencies": {
     "chai": "^4.3.6",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "express":"^4.18.2"
+
   }
 }
