No funciona bien cuando se lanza con compose.yml

--- a/my-selenium-web/Dockerfile
+++ b/my-selenium-web/Dockerfile
@@ -1,11 +1,10 @@
 ARG VERSION=slim
 FROM node:${VERSION:-slim}
-RUN mkdir -p /usr/src/app/src/public/js
+RUN mkdir -p /usr/src/app/www/public
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
-COPY src/*.js ./src/
-COPY src/public/*.html ./src/public/
-COPY src/public/js/*.js ./src/public/js/
+COPY src/*.js ./www/
+COPY src/public/*.html ./www/public/
 EXPOSE 8080
-CMD ["node","src/index.js"]
+CMD ["node","www/index.js"]
