--- a/my-selenium-web/package.json
+++ b/my-selenium-web/package.json
@@ -33,9 +33,11 @@
   },
   "homepage": "https://github.com/profeJG/docker-peps/blob/main/my-javascript-app/README.md",
   "dependencies": {
-    "chai": "^4.3.6",
-    "mocha": "^10.2.0",
-    "express":"^4.18.2"
+    "express":"^4.18.2",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
+    
 
   }
 }
