--- a/my-http-server/Dockerfile
+++ b/my-http-server/Dockerfile
@@ -1,6 +1,11 @@
+# Descargamos una version del contenedor oficial Node.js
 ARG VERSION=slim
 FROM node:${VERSION:-slim}
-#RUN mkdir -p /usr/src/app/
-#WORKDIR /usr/src/app
-EXPOSE 8080
 
+# Establecemos el directorio de trabajo 
+WORKDIR /usr/src/web_server/public
+ADD ./ /usr/src/web_server/public/
+EXPOSE 8080
+#RUN npm install && npm start
+RUN npm install
+CMD [ "npm","start" ]
